[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/map_view.gd" id="1"]

[node name="MapView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.9, 0.85, 0.7, 1)

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -100.0

[node name="UIContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0

[node name="TestMinigameButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Test Minigame"

[node name="BackButton" type="Button" parent="UIContainer"]
layout_mode = 2
text = "Back to Menu" 